<resources>
    <string name="app_name" translatable="false">Quiz</string>
    <string name="login" translatable="false">Login</string>
    <string name="register">Register</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_pass">Enter password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="have_account">I have account</string>
    <string name="empty_fields">Please, fill all fields!</string>
    <string name="pass_not_equal">Passwords are not equals!</string>
    <string name="login_err">Login is busy!</string>
    <string name="passincorrect">Incorrect Password!</string>
    <string name="main_nav_item">Main</string>
    <string name="leader_nav_item">Leaders</string>
    <string name="profile_nav_item">Profile</string>
    <string name="results">Results</string>
    <string name="settings">Settings</string>
    <string name="testscompleted">Tests completed</string>
    <string name="average_score">Average Score</string>
    <string name="exit">Exit</string>
    <string name="mainscreentext">Main</string>
    <string name="questions">Questions: </string>
    <string name="pressandhold">Hold to start!</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good!</string>
    <string name="average">Average!</string>
    <string name="bad">Bad!</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="my_results">My results</string>
    <string name="username">Username</string>
    <string name="score">Score</string>
    <string name="empty">No results!</string>
    <string name="return_to_main">Return to main</string>
    <string name="time">Time Elapsed</string>
    <string name="delete_all_results">Delete all results</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>