<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/login_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColor="@color/primary_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/login_text_view"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/enter_login"
            android:paddingVertical="14dp"
            android:paddingLeft="20dp"
            android:maxLines="1"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/enter_pass"
            android:inputType="textPassword"
            android:maxWidth="10dp"
            android:paddingVertical="14dp"
            android:paddingLeft="20dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color"
            android:onClick="onSignInBtnClick"
            android:paddingHorizontal="80dp"
            android:paddingVertical="14dp"
            android:text="@string/sign_in"
            android:textColor="@color/background_color" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/register_btn_bg"
            android:onClick="onSignUpBtnClick"
            android:paddingHorizontal="60dp"
            android:paddingVertical="1dp"
            android:text="@string/sign_up"
            android:textColor="@color/primary_color" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>